# DNA2Graph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: website.yml
dna2graph/: cli_main.py  constants.py  gui_main.py  utils.py
dna2graph/assets/: defaults.json  target_cdf.npy
dna2graph/config/: parameter_manager.py
dna2graph/core/: app.py  classification.py  correction.py  export.py  filters.py  graph_utils.py  image_utils.py  model.py  segmentation.py
dna2graph/gui/: advanced_preferences.py  main_window.py
manual/: manual.tex
manual/tables/: correction_pipeline.tex  segmentation_pipeline.tex
website/: docs.html  download.html  index.html  outputs.html  script.js  styles.css  tutorials.html
